[gd_scene load_steps=8 format=3 uid="uid://bcvctldu6375w"]

[ext_resource type="Theme" uid="uid://bfso10g3u0yvr" path="res://themes/main_theme.tres" id="1_urw3v"]
[ext_resource type="Script" uid="uid://b6ufwg4wwvvf8" path="res://singeltons/options/options_main.gd" id="2_2bu3n"]
[ext_resource type="PackedScene" uid="uid://dqonki5iro1an" path="res://singeltons/sound_slider.tscn" id="3_xwgc6"]

[sub_resource type="Animation" id="Animation_42424"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-960, 0)]
}

[sub_resource type="Animation" id="Animation_bdjhu"]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-960, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ury5b"]
resource_name = "pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 540)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42424"]
_data = {
&"RESET": SubResource("Animation_42424"),
&"open": SubResource("Animation_bdjhu"),
&"pause": SubResource("Animation_ury5b")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_right = -960.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_urw3v")
script = ExtResource("2_2bu3n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_42424")
}
autoplay = "RESET"

[node name="Options" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -134.0
offset_right = 150.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContent" type="VBoxContainer" parent="Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Options/MainContent"]
layout_mode = 2
text = "- Menu -"
horizontal_alignment = 1
uppercase = true

[node name="Master" type="Label" parent="Options/MainContent"]
layout_mode = 2
text = "Master"

[node name="SoundSlider" parent="Options/MainContent" instance=ExtResource("3_xwgc6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Master2" type="Label" parent="Options/MainContent"]
layout_mode = 2
text = "SFX"

[node name="SoundSlider2" parent="Options/MainContent" instance=ExtResource("3_xwgc6")]
unique_name_in_owner = true
layout_mode = 2
bus_name = "SFX"

[node name="Master3" type="Label" parent="Options/MainContent"]
layout_mode = 2
text = "Music"

[node name="SoundSlider3" parent="Options/MainContent" instance=ExtResource("3_xwgc6")]
unique_name_in_owner = true
layout_mode = 2
bus_name = "Music"

[node name="ButtonCredits" type="Button" parent="Options/MainContent"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits
"

[node name="ReturnBtn" type="Button" parent="Options/MainContent"]
unique_name_in_owner = true
layout_mode = 2
text = "Return to Game"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_main_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_main_animation_started"]
[connection signal="pressed" from="Options/MainContent/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="Options/MainContent/ReturnBtn" to="." method="_on_return_btn_pressed"]
